--- a/examples/pipelines/demo-question-answering/Dockerfile
+++ b/examples/pipelines/demo-question-answering/Dockerfile
@@ -1,9 +1,9 @@
-FROM pathwaycom/pathway:latest
+FROM python:3.11
 
 WORKDIR /app
 
 RUN apt-get update \
-    && apt-get install -y python3-opencv tesseract-ocr-eng \
+    && apt-get install -y python3-opencv \
     && rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 
 COPY requirements.txt .
